@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.935 2008-09-01 19:05:03 castaglia Exp $
+$Id: NEWS,v 1.936 2008-09-04 16:27:55 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -55,6 +55,7 @@ CVS
 - Bug 3108 - Support removing MLST from FEAT list.  The mod_facts module
   now supports a FactsAdvertise directive; see doc/modules/mod_facts.html
   for details.
+- Bug 3109 - Errors with file uploads logged but not reported to clients.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
